--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "bugs": {
     "url": "https://github.com/reown-com/issues"
   },
+  "overrides": {
+    "tar": "7.5.3"
+  },
   "devDependencies": {
     "@changesets/changelog-github": "0.4.1",
     "@changesets/cli": "2.29.8",
@@ -54,7 +57,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@types/node": "18.7.3",
-    "@types/sinon": "10.0.13",
+    "@types/sinon": "21.0.0",
     "@typescript-eslint/eslint-plugin": "5.33.0",
     "@typescript-eslint/parser": "5.33.0",
     "esbuild": "0.25.0",
@@ -72,7 +75,7 @@
     "prettier": "2.7.1",
     "rollup": "2.79.2",
     "rollup-plugin-esbuild": "4.9.3",
-    "sinon": "14.0.0",
+    "sinon": "21.0.1",
     "typescript": "4.7.4",
     "vitest": "3.2.4"
   }
