--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -48,7 +48,7 @@
     "@walletconnect/utils": "2.23.0"
   },
   "devDependencies": {
-    "@ethersproject/wallet": "5.7.0"
+    "ethers": "6.13.4"
   },
   "repository": {
     "type": "git",
